Add README, bugfix print statement.

--- a/01-parsing.ipynb
+++ b/01-parsing.ipynb
@@ -232,7 +232,7 @@
    "outputs": [],
    "source": [
     "for par in v.What.Group.Param:\n",
-    "    print par.Description"
+    "    print(par.Description)"
    ]
   },
   {
